# rust-workshop

./: README.md
part-1/: README.md
part-1/solution/src/: lib.rs
part-2/: README.md
part-2/solution/: Cargo.toml
part-2/solution/src/: lib.rs
part-3/: README.md
part-3/solution/src/: lib.rs
part-4/: README.md
part-4/solution/: Cargo.toml
part-4/solution/src/: main.rs
part2/: README.md
