[package]
name = "solution"
version = "0.1.0"
authors = ["Jenna Goddard <jennag@microsoft.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.42"
curl-sys = { git = "https://github.com/alexcrichton/curl-rust.git" }